syntax = "proto3";
package Uploads;

service GuploadService {
        rpc Upload(stream Chunk) returns (UploadStatus) {}
}

service RepartirService {
        rpc Repartir(stream Chunk) returns (UploadStatus) {}
}

service DownloadService{
        rpc Download(stream InfoChunk) returns (stream Content){}
}
message Chunk {
        bytes Content = 1;
        string Name = 2;
        int32 Part = 3;
        string Puerto =4;
}

message UploadStatus {
        string Message = 1;
}

message InfoChunk{
        string Port =1;
        string Namepart =2;
}

message Content{
        bytes Content=1;
        string Nametrozo=2;
}
